--- a/package.json
+++ b/package.json
@@ -14,20 +14,28 @@
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-menubar": "^1.1.14",
     "@radix-ui/react-navigation-menu": "^1.2.12",
-    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.0.15",
+    "@types/leaflet": "^1.9.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.9.4",
+    "intlayer": "^5.5.9",
+    "leaflet": "^1.9.4",
     "lightningcss": "^1.29.3",
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-intlayer": "^5.5.9",
+    "react-leaflet": "^5.0.0",
     "react-router": "^7.4.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.15",
-    "tw-animate-css": "^1.2.4"
+    "tw-animate-css": "^1.2.4",
+    "vite-intlayer": "^5.5.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
