--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "translate":"npx intlayer dictionaries build"
+    "translate": "npx intlayer dictionaries build"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.4",
@@ -33,6 +33,7 @@
     "react-intlayer": "^5.5.9",
     "react-leaflet": "^5.0.0",
     "react-router": "^7.4.0",
+    "swiper": "^11.2.8",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.15",
     "tw-animate-css": "^1.2.4",
