--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@types/leaflet": "^1.9.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.9.4",
     "intlayer": "^5.5.9",
     "leaflet": "^1.9.4",
@@ -29,6 +30,7 @@
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-calendar": "^6.0.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-intlayer": "^5.5.9",
