--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "translate": "npx intlayer dictionaries build"
+    "translate": "pnpm dlx intlayer dictionaries build"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.4",
@@ -46,6 +46,7 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/jwt-decode": "^3.1.0",
+    "baseline-browser-mapping": "^2.8.29",
     "@types/node": "^22.13.13",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
@@ -58,5 +59,5 @@
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
   },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "packageManager": "pnpm@10.23.0+sha512.21c4e5698002ade97e4efe8b8b4a89a8de3c85a37919f957e7a0f30f38fbc5bbdd05980ffe29179b2fb6e6e691242e098d945d1601772cad0fef5fb6411e2a4b"
 }
