--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.0.15",
     "@types/leaflet": "^1.9.18",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -33,6 +34,7 @@
     "react-calendar": "^6.0.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-intlayer": "^5.5.9",
     "react-leaflet": "^5.0.0",
