--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,97 +2,88 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name ${DOMAIN} www.${DOMAIN};
+    # server_name ${DOMAIN} www.${DOMAIN};
+    server_name localhost;
     server_tokens off;
     client_max_body_size 20M;
 
     # Redirect all HTTP to HTTPS
-    location / {
-        return 301 https://$host$request_uri;
-    }
+    # location / {
+    #     return 301 https://$host$request_uri;
+    # }
 }
 
 # HTTPS server
-server {
-    listen 443 ssl;
-    listen [::]:443 ssl;
-    http2 on;
-    server_name ${DOMAIN} www.${DOMAIN};
-    server_tokens off; # Disable Nginx version information on error pages and response headers
-    client_max_body_size 20M;
+# server {
+#     listen 443 ssl;
+#     listen [::]:443 ssl;
+#     http2 on;
+#     server_name ${DOMAIN} www.${DOMAIN};
+#     server_tokens off; # Disable Nginx version information on error pages and response headers
+#     client_max_body_size 20M;
 
-    # SSL settings
-    ssl_certificate /vol/proxy/certificate.crt;
-    ssl_certificate_key /vol/proxy/private.key;
-    ssl_trusted_certificate /vol/proxy/ca_bundle.crt;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers HIGH:!aNULL:!MD5;
+#     # SSL settings
+#     ssl_certificate /vol/proxy/certificate.crt;
+#     ssl_certificate_key /vol/proxy/private.key;
+#     ssl_trusted_certificate /vol/proxy/ca_bundle.crt;
+#     ssl_protocols TLSv1.2 TLSv1.3;
+#     ssl_prefer_server_ciphers on;
+#     ssl_ciphers HIGH:!aNULL:!MD5;
 
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-    #add_header Referrer-Policy "no-referrer";
-    add_header Referrer-Policy "strict-origin-when-cross-origin";
-    add_header X-Content-Type-Options "nosniff";
+#     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+#     #add_header Referrer-Policy "no-referrer";
+#     add_header Referrer-Policy "strict-origin-when-cross-origin";
+#     add_header X-Content-Type-Options "nosniff";
 
-    # 🔁 Backend reverse proxy
-    location /api/ {
-        proxy_pass http://backend:8080;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_redirect off;
-    }
+#     # 🔁 Backend reverse proxy
+#     location /api/ {
+#         proxy_pass http://backend:8080;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_redirect off;
+#     }
 
-    # Django Admin
-    location /secadm/ {
-        proxy_pass http://backend:8080;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Origin $scheme://$host;
-        proxy_redirect off;
-    }
+#     # Django Admin
+#     location /tnh-adm/ {
+#         proxy_pass http://backend:8080;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header Origin $scheme://$host;
+#         proxy_redirect off;
+#     }
 
-    # Flower
-    location /flower/ {
-        proxy_pass http://flower:5566;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_redirect off;
-    } 
+#     # 🖼️ Static/media files
+#     location /static/ {
+#         alias /app/staticfiles/;
+#     }
 
-    # 🖼️ Static/media files
-    location /static/ {
-        alias /app/staticfiles/;
-    }
+#     # Media files
+#     location /media/ {
+#         alias /app/media/;
+#         expires 30d;
+#         access_log off;
+#         autoindex off;
+#         add_header Cache-Control "public";
+#     }
 
-    # Media files
-    location /ticketdocs/ {
-        alias /app/ticketdocs/;
-        expires 30d;
-        access_log off;
-        autoindex off;
-        add_header Cache-Control "public";
-    }
+#     # 🌐 React frontend
+#     location / {
+#         root /usr/share/nginx/html;
+#         index index.html;
+#         try_files $uri /index.html;
+#     }
 
-    # 🌐 React frontend
-    location / {
-        root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri /index.html;
-    }
-
-    # Cache static files
-    # location ~* \.(?:js|css|woff2?|eot|ttf|otf|png|jpg|jpeg|gif|ico|svg|webp)$ {
-    #     expires 2M;
-    #     access_log off;
-    #     add_header Cache-Control "public";
-    # }
-}
+#     # Cache static files
+#     # location ~* \.(?:js|css|woff2?|eot|ttf|otf|png|jpg|jpeg|gif|ico|svg|webp)$ {
+#     #     expires 2M;
+#     #     access_log off;
+#     #     add_header Cache-Control "public";
+#     # }
+# }
 # Enable Gzip compression
 gzip on;
 gzip_http_version 1.1;
