Use server ip for access

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,7 +3,7 @@ server {
     listen 80;
     listen [::]:80;
     # server_name ${DOMAIN} www.${DOMAIN};
-    server_name localhost;
+    server_name 173.212.208.41;
     server_tokens off;
     client_max_body_size 20M;
 
