--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,6 +7,12 @@ server {
     server_tokens off;
     client_max_body_size 20M;
 
+    location / {
+        root /usr/share/nginx/html;
+        index index.html;
+        try_files $uri /index.html;
+    }
+
     # Redirect all HTTP to HTTPS
     # location / {
     #     return 301 https://$host$request_uri;
@@ -70,12 +76,12 @@ server {
 #         add_header Cache-Control "public";
 #     }
 
-#     # 🌐 React frontend
-#     location / {
-#         root /usr/share/nginx/html;
-#         index index.html;
-#         try_files $uri /index.html;
-#     }
+    # 🌐 React frontend
+    # location / {
+    #     root /usr/share/nginx/html;
+    #     index index.html;
+    #     try_files $uri /index.html;
+    # }
 
 #     # Cache static files
 #     # location ~* \.(?:js|css|woff2?|eot|ttf|otf|png|jpg|jpeg|gif|ico|svg|webp)$ {
