--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "react-intlayer": "^5.5.9",
     "react-leaflet": "^5.0.0",
     "react-router": "^7.4.0",
+    "react-select": "^5.10.2",
     "swiper": "^11.2.8",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.15",
